network-policies/allow-api-from-webapp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-api-from-webapp
  namespace: echo-app-ns
spec:
  podSelector:
    matchLabels:
      app: echo-app
      tier: back
  ingress: 
  - from:
    - podSelector:
        matchLabels:
          app: echo-app
          tier: front
    ports:
      - port: 80
        protocol: TCP
