network-policies/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: echo-app-ns
spec:
  podSelector: {}
  ingress: []
